--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>BP Santa Brígida</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
   <body>
     <header id="header"></header>
@@ -40,8 +40,8 @@
 
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script>
-      $(function (){$('#footer').load("/component/footer.html")});
-      $(function (){$('#header').load("/component/header.html")});
+      $(function (){$('#footer').load("./component/footer.html")});
+      $(function (){$('#header').load("./component/header.html")});
     </script>
   </body>
 </html>
