--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -117,8 +117,8 @@
 
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 <script>
-  $(function (){$('#footer').load("/component/footer.html")});
-  $(function (){$('#header').load("/component/header.html")});
+  $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
+  $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
 </script>
 </body>
 </html>
