--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -61,91 +61,91 @@
         </select>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 1">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 1">
         <h2>Producto 1</h2>
         <p>Descripción del producto 1</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 2">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 2">
         <h2>Producto 2</h2>
         <p>Descripción del producto 2</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
       </div>
       <div class="product">
-        <img src="/icon.png" alt="Producto 3">
+        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
         <h2>Producto 3</h2>
         <p>Descripción del producto 3</p>
         <button>Añadir</button>
@@ -159,8 +159,8 @@
 
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 <script>
-  $(function (){$('#footer').load("/component/footer.html")});
-  $(function (){$('#header').load("/component/header.html")});
+  $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
+  $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
 </script>
 </body>
 </html>
