--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>BP Santa Brígida</title>
+    <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
   <body>
@@ -11,20 +13,45 @@
 
     <main>
 
-      <div class="carousel">
-        <img src="./img/icon.png" alt="">
+      <div class="carousel-home">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+          <div class="carousel-indicators">
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          </div>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+            </div>
+            <div class="carousel-item">
+              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+            </div>
+            <div class="carousel-item">
+              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
       </div>
 
       <div class="presentation">
           <div class="description" >
             <h2>TITULO</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tristique senectus et netus et malesuada fames ac turpis. Scelerisque eu ultrices vitae auctor eu. Interdum velit euismod in pellentesque massa. Duis tristique sollicitudin nibh sit amet. Urna nec tincidunt praesent semper feugiat nibh. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Neque gravida in fermentum et. Egestas congue quisque egestas diam in arcu cursus. Lorem mollis aliquam ut porttitor leo a diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Leo a diam sollicitudin tempor id eu nisl nunc mi. </p>
+            <p class="p-justify" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tristique senectus et netus et malesuada fames ac turpis. Scelerisque eu ultrices vitae auctor eu. Interdum velit euismod in pellentesque massa. Duis tristique sollicitudin nibh sit amet. Urna nec tincidunt praesent semper feugiat nibh. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Neque gravida in fermentum et. Egestas congue quisque egestas diam in arcu cursus. Lorem mollis aliquam ut porttitor leo a diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Leo a diam sollicitudin tempor id eu nisl nunc mi. </p>
           </div>
-        <img src="./img/icon.png" alt="">
+        <img src="/PWM-TEMPLATES/img/templatebox.png" alt="">
       </div>
 
       <div class="ubication">
-        <img src="./img/icon.png" alt="">
+        <img src="/PWM-TEMPLATES/img/templatebox.png" alt="">
         <div class="description-ubication">
           <h2>Direccion:YYY, YYY YYYYY</h2>
           <h2>Telefono:XXX-XXX-XXX</h2>
@@ -37,7 +64,7 @@
     </main>
 
     <footer id="footer"></footer>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script>
       $(function (){$('#footer').load("./component/footer.html")});
