--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="utf-8">
   <title>BP Santa Brígida</title>
+  <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
   <link rel="stylesheet" type="text/css" href="\PWM-TEMPLATES\css\main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 <body>
   <div class="register-login-form">
     <form>
-      <img class="imgUser" src="\PWM-TEMPLATES\icon.png">
+      <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
       <h2>Inicia Sesion</h2>
       <input type="email" placeholder="Correo electrónico">
       <input type="password" placeholder="Contraseña">
@@ -20,5 +23,7 @@
       <p>¿No tienes una cuenta? <a href="\PWM-TEMPLATES\pages\signUp.html" >Regístrate</a> </p>
     </div>
   </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+
 </body>
 </html>
