--- a/pages/store.html
+++ b/pages/store.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>BP Santa Brígida</title>
+  <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
   <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 </head>
 <body>
 
@@ -11,7 +13,7 @@
 
 <main class="main-tienda" >
 
-  <aside>
+  <aside class="shadow-lg p-3 mb-5 bg-body rounded">
     <p>AQUI VAN LAS CATEGORIAS</p>
 
     <div class="category">
@@ -36,6 +38,27 @@
         <a href="#">SUBCATEGORIA 2</a>
       </div>
     </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 4</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 5</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 6</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
   </aside>
 
 
@@ -44,119 +67,111 @@
     <div>
       <h1 class="product-title" >Productos Tienda</h1>
       <div class="filters">
-        <select class="category-select">
-          <option value="">Marca: Todas</option>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Marca: Todas</option>
           <option value="">Marca: xxx</option>
           <option value="">Marca: xxx</option>
           <option value="">Marca: xxx</option>
         </select>
-
-
-        <select class="order-select">
-          <option value="">Ordenar por: defecto</option>
+        <select class="form-select" aria-label="Default select example">
+          <option selected>Ordenar por: defecto</option>
           <option value="">Ordenar por: orden2</option>
           <option value="">Ordenar por: orden3</option>
           <option value="">Ordenar por: orden4</option>
           <option value="">Ordenar por: orden5</option>
         </select>
       </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 1">
-        <h2>Producto 1</h2>
-        <p>Descripción del producto 1</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 2">
-        <h2>Producto 2</h2>
-        <p>Descripción del producto 2</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
-      <div class="product">
-        <img src="/PWM-TEMPLATES//icon.png" alt="Producto 3">
-        <h2>Producto 3</h2>
-        <p>Descripción del producto 3</p>
-        <button>Añadir</button>
-      </div>
+      <div class="product-aline" >
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
+
+        <div class="card product shadow-lg">
+          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+          <div class="card-body">
+            <p class="card-text">Producto 1</p>
+            <h5 class="card-title">00,00€</h5>
+            <a href="#" class="btn btn-primary">Añadir</a>
+          </div>
+        </div>
     </div>
+    </div>
+
     <footer class="footer-store" id="footer"></footer>
   </section>
 </main>
 
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 <script>
   $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
