--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>BP Santa Brígida</title>
+  <link rel="shortcut icon" href="/PWM-TEMPLATES/img/templatebox.png">
   <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 <body>
 
@@ -11,7 +14,7 @@
 
 <main class="main-tienda" >
 
-  <aside>
+  <aside class="shadow-lg p-3 mb-5 bg-body rounded">
     <p>AQUI VAN LAS CATEGORIAS</p>
 
     <div class="category">
@@ -36,75 +39,106 @@
         <a href="#">SUBCATEGORIA 2</a>
       </div>
     </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 4</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 5</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
+    <div class="category">
+      <h4 class="">CATEGORIA 6</h4>
+      <div class="category-content">
+        <a href="#">SUBCATEGORIA 1</a>
+        <a href="#">SUBCATEGORIA 2</a>
+      </div>
+    </div>
   </aside>
 
 
 
-  <section class="reserve">
-    <h1>Reserva</h1>
-    <article class="reserve-box">
 
-      <div class="reserve-box-item" >
+  <section class="reserve ">
+    <h1>Reserva</h1>
+    <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
-      <div class="reserve-box-item" >
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
+        <p>HORA: xx:yy</p>
+      </div>
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
+        <p>HORA: xx:yy</p>
+      </div>
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
+        <p>HORA: xx:yy</p>
+      </div>
+      <div class="reserve-box-item shadow p-3 mb-5 bg-body rounded" >
         <p>HORA: xx:yy</p>
       </div>
     </article>
@@ -114,6 +148,7 @@
 </main>
 
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
 <script>
