--- a/pages/store.html
+++ b/pages/store.html
@@ -87,7 +87,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -96,7 +98,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -105,7 +109,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -114,7 +120,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -123,7 +131,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -132,7 +142,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -141,7 +153,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -150,7 +164,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
 
@@ -159,7 +175,9 @@
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
-                <a href="#" class="btn btn-primary">Añadir</a>
+                <div  class="btn-color">
+                    <a ref="" class="btn">Añadir</a>
+                </div>
               </div>
             </div>
         </div>
