--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -142,7 +142,11 @@
             <p>HORA: xx:yy</p>
           </div>
         </article>
-        <button>Reservar</button>
+
+        <div  class="btn-color">
+        <a ref="" class="btn">Reservar</a>
+        </div>
+
         <footer class="footer-store" id="footer"></footer>
       </section>
     </main>
