--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -14,7 +14,7 @@
 
     <main class="main-tienda" >
 
-      <aside class="shadow-lg p-3 mb-5 bg-body rounded">
+      <aside class="shadow-lg p-3 mb-5 rounded">
         <p>AQUI VAN LAS CATEGORIAS</p>
 
         <div class="category">
@@ -65,7 +65,7 @@
 
 
 
-      <section class="reserve ">
+      <section class="reserve">
         <h1>Reserva</h1>
         <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
 
@@ -143,8 +143,8 @@
           </div>
         </article>
 
-        <div  class="btn-color">
-        <a ref="" class="btn">Reservar</a>
+        <div id="btn-reserve" class="btn-color">
+          <a ref="" class="btn">Reservar</a>
         </div>
 
         <footer class="footer-store" id="footer"></footer>
