--- a/pages/store.html
+++ b/pages/store.html
@@ -13,50 +13,52 @@
 
     <main class="main-tienda" >
 
-      <aside class="shadow-lg p-3 mb-5 bg-body rounded">
-        <p>AQUI VAN LAS CATEGORIAS</p>
+      <aside class="shadow-lg p-3 mb-5 rounded">
+        <div id="aside-color">
+          <p>AQUI VAN LAS CATEGORIAS</p>
 
-        <div class="category">
-          <h4 class="">CATEGORIA 1</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 1</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
-        </div>
 
-        <div class="category">
-          <h4 class="">CATEGORIA 2</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 2</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 3</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 3</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 4</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 4</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 5</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 5</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
-        </div>
-        <div class="category">
-          <h4 class="">CATEGORIA 6</h4>
-          <div class="category-content">
-            <a href="#">SUBCATEGORIA 1</a>
-            <a href="#">SUBCATEGORIA 2</a>
+          <div class="category">
+            <h4 class="">CATEGORIA 6</h4>
+            <div class="category-content">
+              <a href="#">SUBCATEGORIA 1</a>
+              <a href="#">SUBCATEGORIA 2</a>
+            </div>
           </div>
         </div>
       </aside>
