--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -13,7 +13,7 @@
 
 <main class="main-tienda" >
 
-  <aside class="shadow-lg p-3 mb-5 bg-body rounded">
+  <aside class="shadow-lg p-3 mb-5 rounded">
     <p>AQUI VAN LAS CATEGORIAS</p>
 
     <div class="category">
