--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
   <body>
-    <header id="header"></header>
+    <header class="shadow-lg" id="header"></header>
 
 
     <main>
