--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8">
     <title>Title</title>
@@ -10,17 +10,19 @@
   </head>
   <body>
     <div class="register-login-form">
-      <form >
+      <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
         <h2>Regístrate</h2>
-        <input type="text" placeholder="Nombre completo">
-        <input type="email" placeholder="Correo electrónico">
-        <input type="password" placeholder="Contraseña">
-        <input type="password" placeholder="Repetir Contraseña">
-        <button>Regístrate</button>
+        <input class="shadow-lg" type="text" placeholder="Nombre completo">
+        <input  class="shadow-lg" type="email" placeholder="Correo electrónico">
+        <input  class="shadow-lg" type="password" placeholder="Contraseña">
+        <input  class="shadow-lg" type="password" placeholder="Repetir Contraseña">
+        <a class="button" href="\PWM-TEMPLATES\pages\dashboard\dashboardAdmin.html">
+          Registrate
+        </a>
         <p>Al registrarte, aceptas nuestras Condiciones, la Política de datos y la Política de cookies.</p>
       </form>
-      <div  class="register-login-box">
+      <div  class="register-login-box shadow-lg">
         <a href="\PWM-TEMPLATES\pages\signIn.html" >¿Ya tienes una cuenta? Inicia Sesion</a>
       </div>
     </div>
