--- a/pages/store.html
+++ b/pages/store.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <header id="header"></header>
+    <header class="shadow-lg" id="header"></header>
 
     <main class="main-tienda" >
 
