--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -10,16 +10,19 @@
   </head>
   <body>
     <div class="register-login-form">
-      <form>
+      <form class="shadow-lg">
         <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
         <h2>Inicia Sesion</h2>
-        <input type="email" placeholder="Correo electrónico">
-        <input type="password" placeholder="Contraseña">
-        <button>Iniciar Sesion</button><br>
+        <input class="shadow-lg"  type="email" placeholder="Correo electrónico">
+        <input class="shadow-lg"  type="password" placeholder="Contraseña">
+          <a class="button" href="\PWM-TEMPLATES\pages\dashboard\dashboardAdmin.html">
+          Iniciar Sesion
+          </a>
+        <br>
         <br>
         <a href="#"> ¿Has olvidado la contraseña? </a>
       </form>
-      <div class="register-login-box">
+      <div class="register-login-box shadow-lg">
         <p>¿No tienes una cuenta? <a href="\PWM-TEMPLATES\pages\signUp.html" >Regístrate</a> </p>
       </div>
     </div>
