--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 
-    <header id="header"></header>
+    <header class="shadow-lg" id="header"></header>
 
     <main>
       <div class="whatwedo">
