--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -81,105 +81,8 @@
           <option value="">Ordenar por: orden5</option>
         </select>
       </div>
-      <div class="product-aline" >
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
+      <div id="contenedor-productos" class="product-aline">
 
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="card product shadow-lg">
-          <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-          <div class="card-body">
-            <p class="card-text">Producto 1</p>
-            <h5 class="card-title">00,00€</h5>
-            <div  class="btn-color">
-              <a ref="" class="btn">Añadir</a>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
@@ -195,5 +98,6 @@
   $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
   $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
 </script>
+<script src="/PWM-TEMPLATES/js/main.js"></script>
 </body>
 </html>
