--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="es">
+<html lang="es"><!--GRUPO 4-->
   <head>
     <meta charset="utf-8">
     <title>BP Santa Brígida</title>
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
   <body>
-    <header class="shadow-lg" id="header"></header>
 
+    <header class="shadow-lg" id="header"></header>
 
     <main>
 
@@ -45,7 +45,14 @@
       <div class="presentation">
           <div class="description" >
             <h2>TITULO</h2>
-            <p class="p-justify" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tristique senectus et netus et malesuada fames ac turpis. Scelerisque eu ultrices vitae auctor eu. Interdum velit euismod in pellentesque massa. Duis tristique sollicitudin nibh sit amet. Urna nec tincidunt praesent semper feugiat nibh. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Neque gravida in fermentum et. Egestas congue quisque egestas diam in arcu cursus. Lorem mollis aliquam ut porttitor leo a diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Leo a diam sollicitudin tempor id eu nisl nunc mi. </p>
+            <p class="p-justify" >Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+              ut labore et dolore magna aliqua. Morbi tristique senectus et netus et malesuada fames ac turpis. Scelerisqu eu
+              ultrices vitae auctor eu. Interdum velit euismod in pellentesque massa. Duis tristique sollicitudin nibh sit amet.
+              Urna nec tincidunt praesent semper feugiat nibh. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque.
+              Neque gravida in fermentum et. Egestas congue quisque egestas diam in arcu cursus. Lorem mollis aliquam ut porttitor
+              leo a diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Leo a diam sollicitudin tempor id eu nisl
+              nunc mi.
+            </p>
           </div>
         <img src="/PWM-TEMPLATES/img/templatebox.png" alt="">
       </div>
@@ -60,15 +67,15 @@
 
       </div>
 
-
     </main>
 
     <footer id="footer"></footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM=" crossorigin="anonymous"></script>
     <script>
-      $(function (){$('#footer').load("./component/footer.html")});
-      $(function (){$('#header').load("./component/header.html")});
+      $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
+      $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
     </script>
   </body>
 </html>
