--- a/pages/dashboard/dashboardAdmin.html
+++ b/pages/dashboard/dashboardAdmin.html
@@ -13,6 +13,13 @@
 
   <aside class="aside-dashboard shadow-lg p-3 mb-5 rounded">
     <div id="aside-color">
+      <div class="aside-user" >
+        <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+          <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
+          <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1z"/>
+        </svg><br>
+        <h3> Administrador</h3>
+      </div>
       <p>Funcionlidades</p>
       <div class="accordion" id="accordionPanelsStayOpenExample">
         <div class="accordion-item">
