--- a/pages/store.html
+++ b/pages/store.html
@@ -83,106 +83,9 @@
               <option value="">Ordenar por: orden5</option>
             </select>
           </div>
-          <div class="product-aline" >
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
+          <div id = "contenedor-productos" class="product-aline">
 
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
-              <div class="card-body">
-                <p class="card-text">Producto 1</p>
-                <h5 class="card-title">00,00€</h5>
-                <div  class="btn-color">
-                    <a ref="" class="btn">Añadir</a>
-                </div>
-              </div>
-            </div>
-        </div>
+          </div>
         </div>
 
         <footer class="footer-store" id="footer"></footer>
@@ -197,5 +100,6 @@
       $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
       $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
     </script>
+    <script src="/PWM-TEMPLATES/js/main.js"></script>
   </body>
 </html>
