--- a/index.html
+++ b/index.html
@@ -8,39 +8,10 @@
     <link rel="stylesheet" href="\PWM-TEMPLATES\css\main.css">
   </head>
   <body>
-
     <header class="shadow-lg" id="header"></header>
-
     <main>
 
-      <div class="carousel-home">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
-            </div>
-            <div class="carousel-item">
-              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
-            </div>
-            <div class="carousel-item">
-              <img src="/PWM-TEMPLATES/img/template.png" class="d-block w-100" alt="TEMPLATE">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
+      <div id="carousel"></div>
 
       <div class="presentation">
           <div class="description" >
@@ -76,6 +47,7 @@
     <script>
       $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
       $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
+      $(function (){$('#carousel').load("/PWM-TEMPLATES/component/carousel.html")});
     </script>
   </body>
 </html>
