--- a/pages/workshopStore.html
+++ b/pages/workshopStore.html
@@ -13,55 +13,7 @@
 
 <main class="main-tienda" >
 
-  <aside class="shadow-lg p-3 mb-5 rounded">
-    <p>AQUI VAN LAS CATEGORIAS</p>
-
-    <div class="category">
-      <h4 class="">CATEGORIA 1</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-
-    <div class="category">
-      <h4 class="">CATEGORIA 2</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-    <div class="category">
-      <h4 class="">CATEGORIA 3</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-    <div class="category">
-      <h4 class="">CATEGORIA 4</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-    <div class="category">
-      <h4 class="">CATEGORIA 5</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-    <div class="category">
-      <h4 class="">CATEGORIA 6</h4>
-      <div class="category-content">
-        <a href="#">SUBCATEGORIA 1</a>
-        <a href="#">SUBCATEGORIA 2</a>
-      </div>
-    </div>
-  </aside>
-
-
+  <aside id="aside" class="shadow-lg p-3 mb-5 rounded"></aside>
 
   <section class="products">
     <div>
@@ -81,8 +33,8 @@
           <option value="">Ordenar por: orden5</option>
         </select>
       </div>
-      <div id="contenedor-productos" class="product-aline">
-
+      <div id = "contenedor-productos" class="product-aline">
+        <!--Contenido Generado por main.js-->
       </div>
     </div>
 
@@ -97,6 +49,7 @@
 <script>
   $(function (){$('#footer').load("/PWM-TEMPLATES/component/footer.html")});
   $(function (){$('#header').load("/PWM-TEMPLATES/component/header.html")});
+  $(function (){$('#aside').load("/PWM-TEMPLATES/component/aside.html")});
 </script>
 <script src="/PWM-TEMPLATES/js/main.js"></script>
 </body>
