--- a/pages/store.html
+++ b/pages/store.html
@@ -36,8 +36,10 @@
           </div>
           <div id = "contenedor-productos" class="product-aline">
             <!--Contenido Generado por main.js-->
-            <div class="card product shadow-lg">
-              <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+            <div class="card product shadow-lg" id="product-template">
+              <div class="img-product">
+                <img src="/PWM-TEMPLATES/img/templatebox.png" class="card-img-top" alt="...">
+              </div>
               <div class="card-body">
                 <p class="card-text">Producto 1</p>
                 <h5 class="card-title">00,00€</h5>
