--- a/pages/whatWeDo.html
+++ b/pages/whatWeDo.html
@@ -14,10 +14,28 @@
 
     <main>
       <div class="whatwedo">
-        <h1>TITULO</h1>
-        <img src="/PWM-TEMPLATES/img/template.png"/>
-        <p class="p-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tristique senectus et netus et malesuada fames ac turpis. Scelerisque eu ultrices vitae auctor eu. Interdum velit euismod in pellentesque massa. Duis tristique sollicitudin nibh sit amet. Urna nec tincidunt praesent semper feugiat nibh. In hac habitasse platea dictumst vestibulum rhoncus est pellentesque. Neque gravida in fermentum et. Egestas congue quisque egestas diam in arcu cursus. Lorem mollis aliquam ut porttitor leo a diam. Viverra maecenas accumsan lacus vel facilisis volutpat est velit. Leo a diam sollicitudin tempor id eu nisl nunc mi.</p>
-
+        <h1>¿Qué Hacemos?</h1>
+        <img src="https://www.estacionbpsantabrigida.com/uploads/yDqEIzja/1059696-DSCF9059-c20ad.w1024.jpg"/>
+        <p class="p-justify">La estación BP Santa Brígida es una gran zona de servicio para su automóvil donde le
+          ofrecemos una respuesta a la medida de sus necesidades.<br>
+          <br>
+          ABIERTO LAS 24 HORAS, CON SERVICIO ATENDIDO EN PISTA DE 6:00 A 22:00.<br>
+          <br>
+          TIENDA ABIERTA 24 HORAS con amplia gama de artículos, alimentación, higiene personal, artículos de un sólo
+          uso, gas, productos de limpieza para su coche y para la casa, artículos de regalo, comida para su mascota y
+          muchos antojos.<br>
+          <br>
+          ZONA DE AUTOLAVADO abierta de 7:00 a 21:00 horas todos los días de la semana, provista de 2 puentes de lavado,
+          2 Jet Wash, 1 soplador-secador, 1 dispensador de papel secante, 2 aspiradoras. Todo ello en unas amplias y
+          cómodas instalaciones.<br>
+          <br>
+          TALLER, servicio rápido para el mantenimiento de su automóvil (cambio de aceite, filtros, bujías, pastillas
+          de freno, amortiguadores, revisión pre-ITV). Venta, montaje, equilibrado y reparación de neumáticos.
+          Alineación de dirección a las cuatro ruedas, avalada por 30 años de experiencia.<br>
+          <br>
+          VENTA DE VEHÍCULOS NUEVOS Y DE OCASIÓN, con una amplia gama así como Peugeot, Mitsubishi, Fiat, Subaru,
+          SSangYong, Jeep, Alfa Romeo, Lancia…
+        </p>
       </div>
     </main>
 
