--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -10,7 +10,10 @@
 
   </head>
   <body onload="loadComponenOther()">
-
+    <div id="loading">
+      <img id="loading-image" src="/PWM-TEMPLATES/img/LOGO.png" alt="Loading..." />
+      <div class="spinner"></div>
+    </div>
     <header class="shadow-lg" id="header"></header>
 
     <main class="main-tienda" >
