--- a/pages/store.html
+++ b/pages/store.html
@@ -9,7 +9,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
   </head>
   <body onload="loadComponenOther();loadProducts('Catalogo Tienda');loadCategory('Catalogo Tienda')">
-
+    <div id="loading">
+      <img id="loading-image" src="/PWM-TEMPLATES/img/LOGO.png" alt="Loading..." />
+      <div class="spinner"></div>
+    </div>
     <header class="shadow-lg" id="header"></header>
 
     <main class="main-tienda" >
