Versión 27. Añadido Calendario en Servicios

--- a/pages/workshopService.html
+++ b/pages/workshopService.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <title>BP Santa Brígida</title>
@@ -22,32 +22,104 @@
 
       <section class="reserve">
         <h1>Reserva</h1>
-        <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
-          <div class="dayOfWeek">
-            <h2>Lunes</h2>
-            <p class="date">Fecha: aaaa-mm-dd</p>
-          </div>
 
-          <div class="dayOfWeek">
-            <h2>Martes</h2>
-            <p class="date">Fecha: aaaa-mm-dd</p>
-          </div>
+        <div id="carouselExample" class="carousel slide carouselTall">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                <div class="dayOfWeek">
+                  <h2>Lunes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
 
-          <div class="dayOfWeek">
-            <h2>Miércoles</h2>
-            <p class="date">Fecha: aaaa-mm-dd</p>
-          </div>
+                <div class="dayOfWeek">
+                  <h2>Martes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
 
-          <div class="dayOfWeek">
-            <h2>Jueves</h2>
-            <p class="date">Fecha: aaaa-mm-dd</p>
-          </div>
+                <div class="dayOfWeek">
+                  <h2>Miércoles</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
 
-          <div class="dayOfWeek">
-            <h2>Viernes</h2>
-            <p class="date">Fecha: aaaa-mm-dd</p>
+                <div class="dayOfWeek">
+                  <h2>Jueves</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Viernes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+              </article></article>
+            </div>
+            <div class="carousel-item">
+              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                <div class="dayOfWeek">
+                  <h2>Lunes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Martes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Miércoles</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Jueves</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Viernes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+              </article></article>
+            </div>
+            <div class="carousel-item">
+              <article class="reserve-box shadow-lg p-3 mb-5 bg-body rounded">
+                <div class="dayOfWeek">
+                  <h2>Lunes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Martes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Miércoles</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Jueves</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+
+                <div class="dayOfWeek">
+                  <h2>Viernes</h2>
+                  <p class="date">Fecha: aaaa-mm-dd</p>
+                </div>
+              </article></article>
+            </div>
           </div>
-        </article>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon btn-reserve" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+            <span class="carousel-control-next-icon btn-reserve" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+
 
         <div id="btn-reserve" class="btn-color">
           <a ref="" class="btn">Reservar</a>
