Versión 32. Poniendo Imagen en formulario de Registro e Inicio de Sesión

--- a/pages/signIn.html
+++ b/pages/signIn.html
@@ -12,7 +12,7 @@
   <body>
     <div class="register-login-form">
       <form class="shadow-lg">
-        <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
+        <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
         <h2>Inicia Sesion</h2>
         <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  class="shadow-lg"  type="email" placeholder="Correo electrónico">
         <input required  minlength="6" maxlength="9" class="shadow-lg"  type="password" placeholder="Contraseña">
