--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -12,7 +12,7 @@
   <body>
     <div class="register-login-form">
       <form class="shadow-lg">
-        <img class="imgUser" src="/PWM-TEMPLATES/img/templatebox.png">
+        <img class="imgUser" src="/PWM-TEMPLATES/img/LOGO.png">
         <h2>Regístrate</h2>
         <input required  id="nombreCompleto" class="shadow-lg" type="text" placeholder="Nombre completo">
         <input required pattern="^[^@]+@[^@]+\.[a-zA-Z]{2,}$"  id="correoElectronico" class="shadow-lg" type="email" placeholder="Correo electrónico">
