--- a/pages/dashboard/dashboardUser.html
+++ b/pages/dashboard/dashboardUser.html
@@ -99,7 +99,7 @@
     </div>
 
     <div  class="eliminate">
-      <a ref="" class="btn">Eliminar cuenta</a>
+      <a ref="" id = "btnEliminarCuenta" class="btn">Eliminar cuenta</a>
     </div>
     <footer class="footer-store" id="footer"></footer>
   </section>
