Versión 41. Añadido fondo y css de tarjeta bp

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
           </div>
         <img src="https://www.estacionbpsantabrigida.com/uploads/BzH8nN2Q/IMG_20201206_234737.jpg" alt="">
       </div>
+
+      <div class="semicircles-container">
+        <div class="semicircle first"></div>
+        <div class="semicircle second"></div>
+        <div class="semicircle third"></div>
+      </div>
+
       <div class="bp_card">
         <div class="description-bp_card">
           <h1>Premiamos tu fidelidad</h1>
@@ -71,6 +78,12 @@
 
         </div>
         <div class="image-bp_card"></div>
+      </div>
+
+      <div class="semicircles-container">
+        <div class="semicircle-down third"></div>
+        <div class="semicircle-down second"></div>
+        <div class="semicircle-down first"></div>
       </div>
 
       <div class="ubication">
